--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -23,9 +23,16 @@ h2
 
 h3
 	font-size: 2rem
+	font-weight: 400
 
 h4
 	font-size: 1.6rem
+	font-weight: 200
+
+h5
+	font-size: 1.6rem
+	font-weight: 200
+	
 
 a
 	color: $delta
@@ -35,7 +42,7 @@ p
 	line-height: 1.7
 	color: $alpha
 	font-weight: 300
-	margin-bottom: 20px
+	margin-bottom: 0px
 	letter-spacing: 0.4px
 
 	@media #{$mobile}
