New position: Software Engineer has been updated

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,2 +1,2 @@
-<p>Welcome! I am Hongkyu Lee, a research assistant in the Department of Computer Science at Kennesaw State University. My research interest is identifying and enforcing security on machine learning and deep learning algorithms. I am currently looking for a Ph. D position.</p>
+<p>Welcome! I am Hongkyu Lee, a software engineer at Telchemy Inc. My role is analyzing network traffic and enhancing its performance with various techniques including machine learning algorithms. I have graduated with a Master of Science in Computer Science at Kennesaw State University. My research interest is identifying and enforcing security threats in software-defined networks and machine learning algorithms.</p>
 
