--- a/_sass/pages/home.sass
+++ b/_sass/pages/home.sass
@@ -18,6 +18,24 @@
             background: #FFF
             box-shadow: #FFF 0 0 0 5px
             border-radius: 3px
+.resumes
+    margin-top: 125px
+
+    > .list
+        position: relative
+
+        &:before
+            display: block
+            width: 7px
+            height: 7px
+            border: $epsilon 1px solid
+            position: absolute
+            top: -5px
+            left: 50%
+            margin-left: -5px
+            background: #FFF
+            box-shadow: #FFF 0 0 0 5px
+            border-radius: 3px
 
 .home > .list,
 .blog > .list,
@@ -55,6 +73,29 @@
         font-style: italic
         font-weight: 300
         margin-bottom : 50px,
+
+.resumes > .list
+    > .item
+        display: block
+        width: 95%
+        margin: 0 auto
+
+    > .item > .url
+        width: 100%
+        margin-top: 25px
+        display: block
+        padding: 0px 0
+        text-decoration: none
+
+    > .item > .url > .title
+
+        margin: 0 
+        width: 100%
+        font-weight: 400
+        transition: all ease-in-out .2s
+
+    > .item:hover > .url > .title
+        color: $delta
 
 
 .projects > .list
@@ -116,4 +157,14 @@
         width: 100%
         font-weight: 200
         transition: all ease-in-out .2s,
+
+.resumes > .list > .item > .url
+    > .title
+        display: inline
+
+    > .emoji
+        display: inline
+        position: relative
+        top: -4px
+        margin-right: 10px
 
